alterações no index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Index</title>
 </head>
 <body>
-    bla bla bla
+    
+    <article>
+        
 
-    novo bla bla bla
+    </article>
 
 </body>
 </html>
